[tool.poetry]
name = "mrtpreproc"
version = "0.1.0"
description = "Mrtrix3 preprocessing SnakeBIDS pipelines"
authors = ["Jason Kai <tkai@uwo.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
snakebids = "^0.5.0"

[tool.poetry.group.dev.dependencies]
snakefmt = "^0.6.0"
black = ">=22.1, <23.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
